# my_multi_rag

./: .gitignore  Qwen2_5_7B_Alpaca_fintune.ipynb  README.md  baseline.ipynb  chart_extract.py  chunker.py  eval_report.py  extract_json_array.py  fitz_pipeline_all.py  get_text_embedding.py  hybrid_search.py  main.py  mineru_parse_pdf.py  mineru_pipeline_all.py  mini_graph.py  pyproject.toml  rag_from_page_chunks.py  rag_from_page_chunks_none.py  rag_from_page_chunks_ori_none.py  rag_from_page_chunks_slow.py  rag_results_raw1.jsonl  rag_results_raw2.jsonl  rag_top1_pred.json  rag_top1_pred_10.json  rag_top1_pred_raw_10.json  requirements.txt  router_enhanced.py  router_enhanced_without_hybe.py  run.py  run_with_hyde_graph.py  spark_data_process.ipynb  spark_model_finetune.ipynb  vision_index.py  vision_index_build.py  vision_rerank.py
image_utils/: async_image_analysis.py  image_analysis_utils.py  prompts.py
